installed redux toolkit

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "goit-react-hw-03-phonebook",
+  "name": "goit-react-hw-06-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kyluk5.github.io/goit-react-hw-05-phonebook",
+  "homepage": "https://kyluk5.github.io/goit-react-hw-06-phonebook",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
